# mpas-bundle

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  RELEASE_NOTES.md  build_mpas.csh  run_odb_build.sh  setup_odb_build.sh
.github/: pull_request_template.md  stable_mark.sh
env-setup/: configure.sh  gnu-derecho.csh  gnu-derecho.sh  gnu-openmpi-cheyenne.csh  gnu-openmpi-cheyenne.sh  intel-derecho.csh  intel-derecho.sh  intel-impi-cheyenne.csh  intel-impi-cheyenne.sh  run_make.bundle.sh
scripts/: run_odb_build.sh  setup_odb_build.sh
